--- a/spark-cassandra-project/spark-master-pod.yaml
+++ b/spark-cassandra-project/spark-master-pod.yaml
@@ -1,21 +1,22 @@
-id: spark-master
-kind: Pod
-apiVersion: v1beta1
-desiredState:
-  manifest:
-    version: v1beta1
-    id: spark
-    containers:
-      - name: spark
-        image: jayunit100/spark7
-        command:
-           - /bin/bash
-           - /opt/run.sh
-           - master
-        cpu: 1000
-        ports:
-          - name: spark-master
-            containerPort: 7077
-labels:
-  name: spark-master
+#  Master pod definition.        # 
+id: spark-master                 # This id will be referenced in the 
+kind: Pod                        # spark-service definition.  
+apiVersion: v1beta1              # Make sure you use the right apiVersion.  This determines how
+desiredState:                    # API calls are made to the kubernetes services.
+  manifest:                      # The manifest defines all containers running for this "service"
+    version: v1beta1             #
+    id: spark                    # In this case, we have one container: Spark. 
+    containers:                  #
+      - name: spark              #  
+        image: jayunit100/spark7 # This is the docker image.  in this case its at dockerhub (default)
+        command:                 #
+           - /bin/bash           # NOTE: When running a command in kubernetes, you need to provide 
+           - /opt/run.sh         # separated arguments in a YAML list.  Similarly you separate params in Json.
+           - master              #
+        cpu: 1000                # This is a relative value.
+        ports:                   #
+          - name: spark-master   # 
+        containerPort: 7077      # The containerPort is equivalent to docker's -p flag, it exposes
+labels:                          # a port externally.
+  name: spark-master             #
 
