--- a/cnegus/db-rc.yaml
+++ b/cnegus/db-rc.yaml
@@ -13,17 +13,10 @@ desiredState:
         id: dbc
         containers:
           - name: dbc
-            image: dbforweb
+            image: "rhel7/dbc" #<-- needs to be built
             cpu: 1000
             ports:
-              - name: cql
-                containerPort: 9042
-              - name: thrift
-                containerPort: 9160
-            env:
-              - key: MAX_HEAP_SIZE
-                value: 512M
-              - key: HEAP_NEWSIZE
-                value: 100M
+              - name: webport
+                containerPort: 80
     labels:
       name: dbc
