--- a/guest-smoke/redis/etc_redis_redis.conf
+++ b/guest-smoke/redis/etc_redis_redis.conf
@@ -95,7 +95,7 @@ tcp-keepalive 0
 # verbose (many rarely useful info, but not a mess like the debug level)
 # notice (moderately verbose, what you want in production probably)
 # warning (only very important / critical messages are logged)
-loglevel notice
+loglevel verbose
 
 # Specify the log file name. Also the empty string can be used to force
 # Redis to log on the standard output. Note that if you use standard
@@ -104,7 +104,7 @@ loglevel notice
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
 # and optionally update the other syslog parameters to suit your needs.
-# syslog-enabled no
+syslog-enabled yes
 
 # Specify the syslog identity.
 # syslog-ident redis
@@ -139,6 +139,8 @@ databases 16
 #
 #   save ""
 
+### Modification for extreme consistency, experimenal (jay)
+save 1 1
 save 900 1
 save 300 10
 save 60 10000
@@ -162,7 +164,7 @@ stop-writes-on-bgsave-error yes
 # For default that's set to 'yes' as it's almost always a win.
 # If you want to save some CPU in the saving child set it to 'no' but
 # the dataset will likely be bigger if you have compressible values or keys.
-rdbcompression yes
+rdbcompression no
 
 # Since version 5 of RDB a CRC64 checksum is placed at the end of the file.
 # This makes the format more resistant to corruption but there is a performance
@@ -185,6 +187,8 @@ dbfilename dump.rdb
 # 
 # Note that you must specify a directory here, not a file name.
 # dir ./
+
+# should we toggle this, try a persistent dir w/ iscsi?
 dir /data
 
 ################################# REPLICATION #################################
@@ -223,7 +227,10 @@ dir /data
 #    an error "SYNC with master in progress" to all the kind of commands
 #    but to INFO and SLAVEOF.
 #
-slave-serve-stale-data yes
+
+# experimental change to "no"  hopefully this will highlight when there are failures 
+# at the consistency level (jay)
+slave-serve-stale-data no
 
 # You can configure a slave instance to accept writes or not. Writing against
 # a slave instance may be useful to store some ephemeral data (because data
@@ -456,7 +463,7 @@ slave-priority 100
 #
 # Please check http://redis.io/topics/persistence for more information.
 
-appendonly no
+appendonly yes
 
 # The name of the append only file (default: "appendonly.aof")
 
@@ -528,7 +535,9 @@ no-appendfsync-on-rewrite no
 # rewrite feature.
 
 auto-aof-rewrite-percentage 100
-auto-aof-rewrite-min-size 64mb
+
+# another experimental feature
+auto-aof-rewrite-min-size 1 
 
 # An AOF file may be found to be truncated at the end during the Redis
 # startup process, when the AOF data gets loaded back into memory.
@@ -661,7 +670,7 @@ latency-monitor-threshold 0
 #  By default all notifications are disabled because most users don't need
 #  this feature and the feature has some overhead. Note that if you don't
 #  specify at least one of K or E, no events will be delivered.
-notify-keyspace-events ""
+notify-keyspace-events "KEg$lshzxeA" # lots of logging, also experimental
 
 ############################### ADVANCED CONFIG ###############################
 
