--- a/guest-smoke/redis/Dockerfile
+++ b/guest-smoke/redis/Dockerfile
@@ -33,7 +33,7 @@ WORKDIR /data
 ADD etc_redis_redis.conf /etc/redis/redis.conf
 
 # Print redis configs and start.
-CMD "grep -v /etc/redis/redis.conf \# && redis-server /etc/redis/redis.conf"
+# CMD "redis-server /etc/redis/redis.conf"
 
 # Expose ports.
 EXPOSE 6379
