--- a/guest-smoke/redis-master/etc_redis_redis.conf
+++ b/guest-smoke/redis-master/etc_redis_redis.conf
@@ -670,7 +670,8 @@ latency-monitor-threshold 0
 #  By default all notifications are disabled because most users don't need
 #  this feature and the feature has some overhead. Note that if you don't
 #  specify at least one of K or E, no events will be delivered.
-notify-keyspace-events "KEg$lshzxeA" # lots of logging, also experimental
+notify-keyspace-events KElg
+# lots of logging, also experimental
 
 ############################### ADVANCED CONFIG ###############################
 
