--- a/spark-cassandra-project/bunk.yaml
+++ b/spark-cassandra-project/bunk.yaml
@@ -1,4 +1,4 @@
-id: spark-master
+id: spark-master-bunk
 kind: Pod
 apiVersion: v1beta1
 desiredState:
@@ -8,17 +8,14 @@ desiredState:
     containers:
       - name: spark
         image: jayunit100/spark7
-        command:
+        bcommand:
            - /bin/bash
            - /opt/run.sh
            - master
-        cpu: 1000
-        ports:
+        bcpu: 1000
+        bports:
           - name: spark-master
             containerPort: 7077
-        env:
-          - name: Sparkmaster
-            value: 7077
-abels:
+labels:
   name: spark-master
 
