--- a/k8petstore/Dockerfile
+++ b/k8petstore/Dockerfile
@@ -2,6 +2,8 @@ FROM google/golang:latest
 
 # Add source to gopath.  This is defacto required for go apps.
 ADD ./src /gopath/src/
+ADD ./static /tmp/static
+
 # $GOPATH/[src/a/b/c]
 # go build a/b/c
 # go run main
@@ -14,4 +16,5 @@ RUN go get main
 #RUN go build main
 
 # Expected that you will override this in production kubernetes.
+ENV STATIC_FILES /tmp/static
 CMD /gopath/bin/main
