--- a/k8petstore/redis/Dockerfile
+++ b/k8petstore/redis/Dockerfile
@@ -10,9 +10,15 @@ FROM dockerfile/ubuntu
 # Install Redis.
 RUN \
   cd /tmp && \
-  wget http://download.redis.io/redis-stable.tar.gz && \
-  tar xvzf redis-stable.tar.gz && \
-  cd redis-stable && \
+  # Modify to stay at this version rather then always update.
+
+  #################################################################
+  ###################### REDIS INSTALL ############################
+  wget http://download.redis.io/releases/redis-2.8.19.tar.gz && \
+  tar xvzf redis-2.8.19.tar.gz && \
+  cd redis-2.8.19 && \
+  ################################################################
+  ################################################################
   make && \
   make install && \
   cp -f src/redis-sentinel /usr/local/bin && \
