local working version w/ explicit containers

--- a/k8petstore/redis/etc_redis_redis.conf
+++ b/k8petstore/redis/etc_redis_redis.conf
@@ -115,7 +115,8 @@ syslog-enabled yes
 # Set the number of databases. The default database is DB 0, you can select
 # a different one on a per-connection basis using SELECT <dbid> where
 # dbid is a number between 0 and 'databases'-1
-databases 16
+
+databases 1 ### This is for an app that only does 1 thing.
 
 ################################ SNAPSHOTTING  ################################
 #
